# sapp

./: pyproject.toml
src/sapp/: app.py  index.py
src/sapp/assets/css/: common.css
src/sapp/components/: callbacks.py  layout.py
src/sapp/utils/: get_data.py
tests/: models.py  test_get_data.py  waterservices.py
tests/test_data/: test_config.toml  test_data.json  test_data2.json
