[tool.poetry]
name = "sapp"
version = "0.1.0"
description = ""
authors = ["MooSee2 <52461645+MooSee2@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sapp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dash = "^2.14.0"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
orjson = "^3.9.9"
flask-cache = "^0.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
